base/todo-dashboard/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: todo-dashboard

spec:
  type: ClusterIP

  selector:
    app: todo-dashboard

  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
