base/todo-dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: todo-dashboard

spec:
  ingressClassName: nginx

  rules:
    - host: todo.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: todo-dashboard
                port:
                  number: 3000
